# multiagents-platform

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff_cleanup.patch
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 14b764188bf0_add_refined_parameter.py  155d3c623c02_create_execution_runs_table.py  1f128b4c74cf_new_execution_run_contract.py  4a8d17117be2_new_execution_run_contract_v2.py  598fff10fb75_expand_tasks_for_hierarchy_and_execution.py  5bcd9435eed5_expand_task_details.py  61d04b669564_create_projects_table.py  644e34a21eef_new_parameter_in_tasks.py  647f42fe55ee_create_tasks_table.py  78d3d05ff24a_initial_schema.py  bef2798eaab3_add_execution_run_reporting_fields.py  d35f0c697f44_create_artifacts_table.py  dcc5be4a4ee5_new_attribute_in_tasks_for_agents.py  e6cbc04ce087_versions_in_projects.py  ede38d0f9acb_add_project_id_to_artifacts_and_make_.py
app/: main.py
app/api/: artifacts.py  atomic_task_generator.py  execution_runs.py  planner.py  projects.py  tasks.py  technical_task_refiner.py  workflow.py
app/core/: config.py
app/db/: base.py  session.py
app/execution_engine/: __init__.py  base.py  budget.py  capabilities.py  context_selection.py  contracts.py  execution_engine_documentacion.md  execution_engine_documentation.md  execution_plan.py  factory.py  file_operations.py  monitoring.py  next_action.py  orchestrator.py  request_adapter.py  resolution_state.py  state.py  subagent_registry.py
app/models/: artifact.py  execution_run.py  project.py  task.py
app/schemas/: artifact.py  (+21 more)
tests/: conftest.py
(+109 files in other folders)
